--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,10 +55,6 @@ jobs:
     - name: Generating Makefiles
       shell: bash
       run: |
-        export enable_ccache=off
-        curl -L https://github.com/blueloveTH/aseprite/releases/download/v0.01/skia.zip --output skia.zip
-        curl -L https://github.com/blueloveTH/aseprite/releases/download/v0.01/libcrypto-1_1-x64.dll --output libcrypto-1_1-x64.dll
-        7z x skia.zip
         if [[ "${{ runner.os }}" == "Windows" ]] ; then
           export enable_ccache=off
         else
@@ -91,8 +87,7 @@ jobs:
           -DENABLE_CCACHE=$enable_ccache \
           -DLAF_BACKEND=$laf_backend \
           -DSKIA_DIR=skia \
-          -DSKIA_LIBRARY_DIR=./skia/out/Release-x64 \
-          -DSKIA_LIBRARY=./skia/out/Release-x64/skia.lib
+          -DSKIA_LIBRARY_DIR=skia/out/Release-$skia_arch
     - name: Compiling
       shell: bash
       run: |
